2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override:
	Use %zd instead of %d since it's a Py_ssize_t and not an int.

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/pygio-utils.h:
	define NO_IMPORT_PYGOBJECT before including pygobject.h

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Require pygobject 2.15.2

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Add a pygio_version module attribute
	(DL_EXPORT): The module is called gio._gio, not just _gio.

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/gio-types.defs:
	Rename gio.IOErrorEnum to gio.ErrorEnum

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Add gio.ERROR which maps to the G_IO_ERROR quark.

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Use the prefix G_IO_ for stripping constants instead of just G_
	* gobject/gobjectmodule.c (pyg_constant_strip_prefix):
	Check so the fist part of name and strip_prefix are the same,
	if they don't, just strip of the part of strip_prefix which
	matches.

	This removes the initial IO_* prefix for some constants in gio.
	Eg, gio.IO_ERROR_* -> gio.ERROR_*

2008-07-16  Johan Dahlin  <johan@gnome.org>
	
	* configure.ac: Post release version bump

=== 2.15.1 ===
2008-07-16  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2008-07-15  Paul Pogonyshev  <pogonyshev@gmx.net>

	* codegen/pygobject-codegen-2.0.in: Rename from
	'pygtk-codegen-2.0.in'.

	* configure.ac:
	* codegen/Makefile.am: Update accordingly.

2008-07-15  Johan Dahlin  <johan@gnome.org>

	* configure.ac: Post release version bump

=== 2.15.0 ===
2008-07-15  Johan Dahlin  <johan@gnome.org>

	New version
	
	* NEWS: Update

	* tests/Makefile.am:
	Make sure we can distcheck the gio module properly

2008-07-15  Johan Dahlin  <johan@gnome.org>

	Bug 450659 – h2def.py - export 'typedef struct' object definitions not
	working

	* codegen/h2def.py:
	Patch by Lauro Moura
